<resources>
    <string name="app_name">MiBibliotecaV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="splash">Logo</string>
    <string name="datos">Datos de acceso</string>
    <string name="imagen_login">Imagen usuario</string>
    <string name="correo_login">Correo Electrónico</string>
    <string name="contrasena_login">Contraseña</string>
    <string name="ingresar_login">Ingresar</string>
    <string name="login_registro"><u>Registro</u></string>
    <string name="titulo_registro">Registro</string>
    <string name="nombre_reg">Nombre de usuario</string>
    <string name="correo_reg">Correo</string>
    <string name="numero_reg">Teléfono Móvil</string>
    <string name="contrasena_reg">Contraseña</string>
    <string name="rep_contrasena_reg">Repita Contraseña</string>
    <string name="avatar_reg">Imagen del avatar</string>
    <string name="examinar_reg">Examinar</string>
    <string name="genero_reg">Género</string>
    <string name="masculino_reg">Masculino</string>
    <string name="femenino_reg">Femenino</string>
    <string name="ciudad_reg">Ciudad de Residencia</string>
    <string name="notificaciones_reg">Recibir notificaciones</string>
    <string name="enviar_reg">Enviar</string>
    <string-array name="lista_de_ciudades">
        <item>Barbosa</item>
        <item>Bello</item>
        <item>Caldas</item>
        <item>Copacabana</item>
        <item>Envigado</item>
        <item>Girardota</item>
        <item>Itagui</item>
        <item>La Estrella</item>
        <item>Medellín</item>
        <item>Sabaneta</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="biblioteca_personal_fragment_label"> Mi Biblioteca Personal</string>
    <string name="prestamos_fragment_label">Mis Préstamos</string>
    <string name="devoluciones_fragment_label">Mis Devoluciones</string>
    <string name="recursos_bibliograficos_fragment_label">Recursos Bibliográficos</string>
    <string name="notificaciones_bibliograficas_fragment_label">Notificaciones Bibliográficas</string>
    <string name="configuracion_global_fragment_label">Información App</string>
    <string name="califiquenos_fragment_label">Califíquenos</string>
    <string name="b_personal">biblioteca personal</string>
    <string name="biblioteca_personal">Descripción: el usuario carga aqui todos los libros de su bibiblioteca individual</string>
    <string name="prestamos">Descripción: Aqui el usuario gestiona el los prestamos de libros</string>
    <string name="imagen_prestamos">imagen para prestamos</string>


    <string name="imagen_notificaciones">notificaciones</string>
    <string name="notificaciones">Descripción: Aqui el usuario encuentra todas las alertas bibliográficas que tenga</string>
    <string name="imagen_configuracion">configuracion</string>

    <string name="imagen_calificacion">calificación</string>
    <string name="calificacion">Descripción: Aquí el usuario califica la app</string>
    <string name="email_drawer">email</string>
    <string name="usuario_drawer">Mi Biblioteca</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="imagen_facebook">ingreso con facebook</string>
    <string name="imagen_gmail">ingreso con gmail</string>

    <string name="title_activity_bibliotecas">BibliotecasActivity</string>
    <string name="zonadebibliotecas">Zona de Bibliotecas</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_libro">Título del Libro</string>
    <string name="autor">Autor del Libro</string>
    <string name="edicion">Número de Edición</string>
    <string name="lugarpublicacion">Lugar de Publicación</string>
    <string name="anoedicion">Año de Edición</string>
    <string name="numpag">Número de Páginas</string>
    <string name="generolit">Género Literario</string>
    <string name="isbn">Código ISBN:</string>
    <string name="examinar">Examinar</string>
    <string name="portada">Foto de portada:</string>
    <string name="guardarlibro">Guardar Libro</string>
    <string name="titulonuevolibro">Ficha Técnica del Libro</string>
    <string name="notasimportantes">Comentarios, notas o frases relevantes</string>
    <string name="galeria">Galería</string>
    <string name="tituloprestamos">Nuevo Préstamo</string>
    <string name="usuarioprestamo">Nombre del Deudor</string>
    <string name="fecha1">Fecha de préstamo: MM/dd/yyyy</string>
    <string name="fecha2">Fecha de devolución: MM/dd/yyyy</string>
    <string name="titulo_fragmento_agregar_libro">Agregar Libro</string>
    <string name="titulo_fragmento_prestar_libro">Prestar Libro</string>
    <string name="nombre_libro">Título</string>

    <string name="menu">⋮</string>
    <!--    paquete de strings generados para el login con google-->
    <string name="facebook_app_id">892286074599719</string>
    <string name="tiutlo_login">Login</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="pick_origen">Seleccione origen</string>
    <string name="fotos">Imagenes del Libro: </string>
    <string name="titulo_ubicacion">Mapa</string>
    <string name="horario_biblioteca">Horario:</string>
    <string name="pagina_biblioteca">Página Web de Recursos:</string>
    <string name="titulo_info_biblioteca">Información</string>
    <string name="galeriatit">Galería del Libro</string>
    <string name="descripcion_app">Descripción App</string>
    <string name="descripcion_contenido">Con el desarrollo de la aplicación se pretende poderle brindar al usuario la opción de gestionar, manipular y almacenar, todos aquellos libros que adquiera dentro de su propia biblioteca. Además, proporciona la facilidad de buscar en la base de datos de alguna bibliotecas Públicas dentro del área metropolitana del Valle de Áburra.</string>
    <string name="permisos_app">Permisos App</string>
    <string name="permisos_label">La aplicación utiliza los siguientes permisos:</string>
    <string name="permisos_ubicacion">- Ubicación aproximada y precisa</string>
    <string name="permisos_storage">- Consultar el contenido de la tarjeta SD (Memoria Externa)</string>
    <string name="permisos_red">- Acceso completo a red y ver las conexiones disponibles</string>
    <string name="plataforma">Disponoble en Plataforma</string>
    <string name="plataforma_label2">- Android</string>
    <string name="version">Versión de la App</string>
    <string name="perimisos_label3">1.0</string>

</resources>