<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="2dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/iv_foto"
                android:layout_width="86dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:src="@drawable/ic_biblioteca"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="159dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:gravity="center_vertical"
                android:text="@string/nombre_libro"
                android:textAlignment="viewStart"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_autor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:gravity="center_vertical"
                android:text="@string/autor"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>